# NeuralNet

./: CMakeLists.txt  LICENSE  README.md
include/: Matrix.h  NeuralNet.h
src/: Matrix.cpp  NeuralNet.cpp  main.cpp
